--- a/templates/exito.html
+++ b/templates/exito.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Se recibió tu información con éxito</h1>
+        <h1>Se ha recibido la información con éxito</h1>
     </div>
     
 </body>
