--- a/templates/exito.html
+++ b/templates/exito.html
@@ -11,6 +11,7 @@
 <body>
     <div class="container">
         <h1>Se recibió tu información con éxito</h1>
+        <h2>Bienvenid@ {{session['nombre']}} {{session['apellido']}}</h2>
     </div>
     
 </body>
