--- a/templates/exito.html
+++ b/templates/exito.html
@@ -12,6 +12,9 @@
     <div class="container">
         <h1>Se recibió tu información con éxito</h1>
         <h2>Bienvenid@ {{session['nombre']}} {{session['apellido']}}</h2>
+        {% if session['tipo_usuario'] == 'vip' %}
+            <h3>Tú si que eres VIP</h3>
+        {% endif %}
     </div>
     
 </body>
