--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <form action="/proceso" method="post" class="col-6 mx-auto">
+        <form action="/proceso" method="post" class="col-6">
             <h1>Nuevo usuario</h1>
             <div class="form-group">
                 <label for="idnombre">Nombre:</label>
@@ -24,6 +24,29 @@
                 <label for="idemail">Email:</label>
                 <input type="email" name="email" class="form-control" id="idemail">
             </div>
+            <input type="hidden" name="tipo_usuario" value="vip">
+            
+            <input type="submit" value="Enviar" class="btn btn-success">
+
+        </form>
+        <form action="/proceso" method="post" class="col-6">
+            <h1>Nuevo usuario</h1>
+            <div class="form-group">
+                <label for="idnombre">Nombre:</label>
+                <input id="idnombre" type="text" name="nombre" class="form-control">
+            </div>
+            <div class="form-group">
+                <label for="idapellido">Apellido:</label>
+                <input type="text" name="apellido" class="form-control" id="idapellido">
+
+            </div>
+            <div class="form-group">
+                <label for="idemail">Email:</label>
+                <input type="email" name="email" class="form-control" id="idemail">
+            </div>
+
+            <input type="hidden" name="tipo_usuario" value="normal">
+
             <input type="submit" value="Enviar" class="btn btn-success">
 
         </form>
